# swarn_thing

./: .env.example  Cargo.toml  README.md  build_log.txt
src/: agent.rs  ipc.rs  lib.rs  llm.rs  main.rs  message.rs  tools.rs
tests/: clone_test.rs  composition_test.rs  discovery_test.rs  evolution_test.rs  inspection_test.rs  ipc_test.rs  tool_sharing_test.rs
tools/: dummy_tool.rhai  evolve_me.rhai  magic_math.rhai  secret_logic.rhai  share_square.rhai  square.rhai  test_clone_tool.rhai  test_removal.rhai  test_send.rhai  tool_a.rhai  tool_b.rhai
