[package]
name = "rust-research-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rhai = { version = "1.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
aws-config = "1.0"
aws-sdk-bedrockruntime = "1.0"
text-colorizer = "1.0"
dotenv = "0.15"
scraper = "0.18"
axum = "0.7"
tower = "0.4"

